fixed about btn bug - took out z-index - line 50

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body,html {font-family: "Red Hat Display"}
 .box:hover h2 {color: #FFF;}
     
 #about 
-{ background-color: #FAFAFA; z-index: -10;}
+{ background-color: #FAFAFA;}
 
 #client
 { background-image: url("world.png");}
